<?xml version="1.0"?>
<package>
  <name>waypoint_global_planner</name>
  <version>0.1.0</version>
  <description>The waypoint_global_planner package</description>

  <maintainer email="markrossetti@gmail.com">mrosse3</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nav_core plugin="${prefix}/waypoint_global_planner_plugin.xml" />
  </export>

</package>
